--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -31,37 +31,13 @@
     - install.containerd.zfs.detect_uuid|default(false)|bool == true
 ###################################################################################################
 
-###[ Detect & Capture Node Token when available ]##################################################
-#- name: Check if node-token file exists
-#  stat:
-#    path: "{{k3s.node_token_path}}"
-#  register: node_token_file
-#  tags: ["always"]
-  
-#- name: Get Node Token and Add to Facts Block
-#  block:
-#  - name: Gather Node Token
-#    slurp:
-#      path: "{{k3s.node_token_path}}"
-#    register: node_token_output
-#    no_log: "{{no_log_secrets|default(true)}}"
-#    when: node_token_file.stat.exists == true
-
-#  - name: Clean and add node_token to facts
-#    set_fact:
-#      node_token: "{{ node_token_output.content | b64decode | regex_replace('\n', '')}}"
-#    no_log: "{{no_log_secrets|default(true)}}"
-#    when: node_token_file.stat.exists == true
-#  tags: ["always"]
-###################################################################################################
-
 - name: Include Task Files
   include_tasks: "{{task_names}}"
   tags: ["always"]
   loop:
     - 00_sanity_check.yml
     - 00_config_rsyslog.yml
-    - 00_create_non_root_user.yml
+    - 00_prep_os.yml
     - 01_install_k3s.yml
     - 02_install_containerd.yml
     - 03_install_helm_client.yml
