--- a/tasks/09_install_democratic_csi_iscsi.yml
+++ b/tasks/09_install_democratic_csi_iscsi.yml
@@ -51,6 +51,15 @@
       mode: '0660'
     loop:
       - "test-claim-iscsi.yaml"
+  when:
+    - install.democratic_csi.iscsi.provisioner is defined
+    - install.democratic_csi.iscsi.install_this|default(false)|bool == true
+  tags:
+    - install_democratic_csi_iscsi
+
+###[ Install democratic-csi iSCSI via Helm ]#######################################################
+- name: Install democratic-csi iSCSI via Helm Block
+  block:
 
   - name: "Copy and Validate iSCSI Provisioner - {{install.democratic_csi.iscsi.provisioner}}.yaml"
     template:
