--- a/tasks/09_install_democratic_csi_nfs.yml
+++ b/tasks/09_install_democratic_csi_nfs.yml
@@ -12,11 +12,6 @@
       name: "{{democratic_csi.nfs.packages}}"
       state: present
 
-  - name: Add democratic-csi Repository to Helm
-    kubernetes.core.helm_repository:
-      name: democratic-csi
-      repo_url: "{{democratic_csi.repo_url}}"
-
   - name: Create directory for democratic-csi yaml files for non-root user
     file:
       path: "/home/{{install.os.non_root_user.name}}/democratic-csi"
@@ -35,6 +30,20 @@
     loop:
       - "test-claim-nfs.yaml"
       - "test-app-nfs-claim.yaml"
+  when:
+    - install.democratic_csi.nfs.provisioner is defined
+    - install.democratic_csi.nfs.install_this|default(false)|bool == true
+  tags:
+    - install_democratic_csi_nfs
+
+###[ Install democratic-csi NFS via Helm ]#########################################################
+- name: Install democratic-csi NFS via Helm Block
+  block:
+
+  - name: Add democratic-csi Repository to Helm
+    kubernetes.core.helm_repository:
+      name: democratic-csi
+      repo_url: "{{democratic_csi.repo_url}}"
 
   - name: "Copy and Validate NFS Provisioner - {{install.democratic_csi.nfs.provisioner}}.yaml"
     template:
