Added apt lock timeout

--- a/tasks/01_install_k3s.yml
+++ b/tasks/01_install_k3s.yml
@@ -16,6 +16,7 @@
     apt:
       name: "{{k3s.packages}}"
       state: present
+      lock_timeout: 120
 
   - name: Install Kubernetes pip3 packages for Ansible
     pip:
