--- a/tasks/08_config_traefik.yml
+++ b/tasks/08_config_traefik.yml
@@ -3,25 +3,7 @@
 # Configure Kubernetes Traefik Ingress Controller
 #
 
-- name: Setup Kubernetes Traefik Ingress Controller Environment Block
-  block:
-
-  - name: Create directory for Traefik yaml files for non-root user
-    file:
-      path: "/home/{{install.os.non_root_user.name}}/traefik"
-      state: directory
-      mode: 0700
-      owner: "{{install.os.non_root_user.name}}"
-      group: "{{install.os.non_root_user.name}}"
-
-  tags:
-   - config_traefik_dns_certs
-   - config_traefik_dashboard
-
-###[ Uses Cloudflare DNS Challenge ]###############################################################
-# Based on: https://it-obey.com/index.php/wildcard-certificates-dns-challenges-and-traefik-in-kubernetes/
-
-- name: Configure Kubernetes Traefik LetsEncrypt for Cloudflare DNS Challenge Block
+- name: Configure Traefik Ingress Controller Block
   block:
   - name: Copy Traefik Template Files
     template:
@@ -31,41 +13,21 @@
      group: "{{install.os.non_root_user.name}}"
      mode: '0660'
     loop:
-      - cloudflare_api_token_secret.yaml
-      - letsencrypt_wildcard_cert.yaml
-      - letsencrypt.yaml
+      - traefik_wildcard_cert.yaml
       - traefik_default_tls_store.yaml
       - traefik_test_apps.yaml
+      - traefik_dashboard.yaml
 
-  - name: Apply Traefik Certificates Scripts
+  - name: Apply Traefik Template Scripts
     kubernetes.core.k8s:
      state: present
      src: "/home/{{install.os.non_root_user.name}}/traefik/{{item}}"
+     apply: yes
      wait: yes
      wait_timeout: 300
     with_items:
-      - cloudflare_api_token_secret.yaml
-      - letsencrypt_wildcard_cert.yaml
-      - letsencrypt.yaml
+      - traefik_wildcard_cert.yaml
       - traefik_default_tls_store.yaml
-  when:
-    - inventory_hostname == groups['k3s_control'][0]
-  
-  tags:
-   - config_traefik_dns_certs
-
-###[ Configure Traefik Dashboard ]#################################################################
-- name: Configure Kubernetes Traefik Dashboard Block
-  block:
-  - name: Copy Traefik Template Files
-    template:
-     src: "templates/traefik/{{item}}.j2"
-     dest: "/home/{{install.os.non_root_user.name}}/traefik/{{item}}"
-     owner: "{{install.os.non_root_user.name}}"
-     group: "{{install.os.non_root_user.name}}"
-     mode: '0660'
-    loop:
-      - traefik_dashboard.yaml
   
   - name: Apply Traefik Dashboard Scripts
     kubernetes.core.k8s:
@@ -91,6 +53,5 @@
 
   when:
     - inventory_hostname == groups['k3s_control'][0]
-    
   tags:
-   - config_traefik_dashboard
+   - config_traefik
